# polymarket_copy

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  install.sh
deploy/: install.sh  pmcopy.service
src/: config.rs  main.rs  menu.rs  models.rs  monitor.rs  sizing.rs  state.rs
src/clob/: auth.rs  client.rs  keys.rs  mod.rs  signing.rs
src/executor/: clob.rs  dry_run.rs  mod.rs
